# vector_db

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conan_provider.cmake  conandata.yml  conanfile.py
src/: .env  CMakeLists.txt  config.toml  main.cpp
src/core/: CMakeLists.txt
src/core/impl/: database.cpp  float_vector.cpp
src/core/impl/indices/: euclidean.cpp
src/core/impl/utils/: utils.cpp
src/core/include/core/: database.h  log.h  status.h
src/core/include/core/indices/: ivfflat.h
src/core/include/core/utils/: splitmix_hash.h  util.h
src/grpc_server/: CMakeLists.txt  server.cpp  worker_pool.h
src/impl/configuration/: CMakeLists.txt  provider.cpp
src/impl/core/: CMakeLists.txt  collection.cpp  database.cpp  float_vector.cpp
src/impl/core/indices/: euclidean.cpp  hnsw.cpp  index.cpp  ivfflat.cpp
src/impl/core/utils/: utils.cpp
src/impl/grpc_server/: CMakeLists.txt  server.cpp
src/impl/logger/: CMakeLists.txt  logger.cpp  logger.h
src/include/configuration/: provider.h
src/include/core/: collection.h  database.h  distance.h  float_vector.h  status.h
src/include/core/indices/: euclidean.h  hnsw.h  index.h  ivfflat.h
src/include/core/utils/: heap.h  k_means.h  util.h
src/include/grpc_server/: server.h  util.h  worker_pool.h
src/include/logger/: logger.h
src/protos/: db.proto
src/unittests/: CMakeLists.txt  configuration_tests.cpp  database_result_tests.cpp  grpc_util_tests.cpp  ivfflat_tests.cpp  main.cpp  persistence_tests.cpp
